# usd2glb

./: CMakeLists.txt  Image.h  LICENSE  README.md  main.cpp
tinyusdz/examples/openglviewer/: CMakeLists.txt
tinyusdz/examples/sdlviewer/: CMakeLists.txt
tinyusdz/models/Kitchen_set/: Kitchen_set.usd  Kitchen_set_instanced.usd  VERSION.txt
tinyusdz/models/Kitchen_set/assets/Ball/: Ball.usd  Ball_payload.usd
tinyusdz/models/Kitchen_set/assets/Book/: Book.usd  Book_payload.usd
tinyusdz/models/Kitchen_set/assets/Bottle/: Bottle.usd  Bottle_payload.usd
tinyusdz/models/Kitchen_set/assets/BottleB/: BottleB.usd  BottleB_payload.usd
tinyusdz/models/Kitchen_set/assets/Bowl/: Bowl.usd  Bowl_payload.usd
tinyusdz/models/Kitchen_set/assets/BreadBag/: BreadBag.usd  BreadBag_payload.usd
tinyusdz/models/Kitchen_set/assets/Broom/: Broom.usd  Broom_payload.usd
tinyusdz/models/Kitchen_set/assets/CastIron/: CastIron.usd  CastIron_payload.usd
tinyusdz/models/Kitchen_set/assets/CeilingLight/: CeilingLight.usd  CeilingLight_payload.usd
tinyusdz/models/Kitchen_set/assets/CerealBox/: CerealBox.usd  CerealBox_payload.usd
tinyusdz/models/Kitchen_set/assets/Chair/: Chair.usd  Chair_payload.usd
tinyusdz/models/Kitchen_set/assets/Cheerio/: Cheerio.usd  Cheerio_payload.usd
tinyusdz/models/Kitchen_set/assets/Clock/: Clock.usd  Clock_payload.usd
tinyusdz/models/Kitchen_set/assets/Crayon/: Crayon.usd  Crayon_payload.usd
tinyusdz/models/Kitchen_set/assets/Cup/: Cup.usd  (+1 more)
tinyusdz/models/Midas__Fortnite_100_Tier_S12_BP_Skin/: scene.usdc
tinyusdz/src/: python-bindings.cc
(+122 files in other folders)
